tests/fixtures/invalid/none_bitor_set.py
# Cannot bitwise OR None and Set[int]
x: None = None | {1, 2, 3}
